# listmonk

./: .gitignore  CLAUDE.md  README.md  WARP.md  change-log.md  great-docs.yml  pyproject.toml  requirements.piptools  requirements.txt  ruff.toml
dev-docs/package-guides/: README.md  content-types_reference.md  listmonk_reference.md  pydantic_reference.md  tenacity_reference.md
docs/: build-timings.json  changelog.html  changelog.md  index.html  license.html  llms-full.txt  llms.txt  robots.txt  search.json  sitemap.xml  skills.html
docs/.well-known/agent-skills/: index.json
docs/.well-known/skills/default/: SKILL.md
docs/reference/: add_subscribers_to_lists.html  add_subscribers_to_lists.md  block_subscriber.html  block_subscriber.md  campaign_by_id.html  campaign_by_id.md  campaign_preview_by_id.html  campaign_preview_by_id.md  campaigns.html  campaigns.md  confirm_optin.html  confirm_optin.md  create_campaign.html  create_campaign.md  create_list.html  create_list.md  create_subscriber.html  create_subscriber.md  create_template.html  create_template.md  delete_campaign.html  delete_campaign.md  delete_list.html  delete_list.md  delete_subscriber.html  delete_subscriber.md  delete_template.html  delete_template.md  disable_subscriber.html  disable_subscriber.md  enable_subscriber.html  enable_subscriber.md  errors.ListmonkFileNotFoundError.html  errors.ListmonkFileNotFoundError.md  errors.OperationNotAllowedError.html  errors.OperationNotAllowedError.md  errors.ValidationError.html  errors.ValidationError.md  get_base_url.html  get_base_url.md  (+68 more)
example_client/: client.py  settings-template.json  settings.json
listmonk/: __init__.py  urls.py
listmonk/errors/: __init__.py
listmonk/impl/: __init__.py
listmonk/models/: __init__.py
scripts/: build_docs.py  serve_docs.py
tests/: conftest.py  factories.py  test_campaigns.py  test_connection.py  test_lists.py  test_media_and_transactional.py  test_models.py  test_subscribers.py  test_templates.py
