[project]
name = "listmonk"
version = "0.3.6"
description = "Listmonk Email API Client for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "email",
    "newsletters",
    "marketing",
    "api-client",
]
authors = [
    { name = "Michael Kennedy", email = "michael@talkpython.fm" },
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
dependencies = [
    "httpx",
    "pydantic",
    "strenum"
]


[project.urls]
Homepage = "https://github.com/mikeckennedy/listmonk"
Tracker = "https://github.com/mikeckennedy/listmonk/issues"
Source = "https://github.com/mikeckennedy/listmonk"

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
    "/example_client",
    "settings.json",
]

[tool.hatch.build.targets.wheel]
packages = ["listmonk"]
exclude = [
    "/.github",
    "/tests",
    "/example_client",
    "settings.json",
]