[project]
name = "listmonk"
version = "0.4.2"
description = "Listmonk Email API Client for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "email",
    "newsletters",
    "marketing",
    "api-client",
]
authors = [
    { name = "Michael Kennedy", email = "michael@talkpython.fm" },
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.15',
    'Typing :: Typed',
]
dependencies = [
    "httpx2>=2.0",
    "pydantic",
    "strenum"
]

[project.optional-dependencies]
dev = [
    # Documentation generator (Quarto-based). Marker keeps [dev] installable on 3.10,
    # which great-docs does not support.
    "great-docs; python_version >= '3.11'",
    "pytest",
]


[project.urls]
Homepage = "https://github.com/mikeckennedy/listmonk"
Tracker = "https://github.com/mikeckennedy/listmonk/issues"
Source = "https://github.com/mikeckennedy/listmonk"
Documentation = "https://mkennedy.codes/docs/listmonk/"

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]


[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
    "/example_client",
    "settings.json",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["listmonk"]
exclude = [
    "/.github",
    "/tests",
    "/example_client",
    "settings.json",
    "/docs",
]